# RuanScript

./: .project  LICENSE  README.md  SECURITY.md
.github/workflows/:  ContinuousIntegration.yml  c-cpp.yml
code/: CMakeLists.txt  CMakeSettings.json  Compilers.c  Compilers.h  MainParser.c  MainReader.c  MainScanner.c  Makefile  Parser.c  Parser.h  Reader.c  Reader.h  Scanner.c  Scanner.h  launch.vs.json  my_program
input/: A12.bat  INPUT1_Hello.rs  INPUT1_Hello.sof  INPUT2_Volume.rs  INPUT2_Volume.sof  INPUT3_Factorial.rs  INPUT3_Factorial.sof  INPUT4_Datatypes.rs  INPUT4_Datatypes.sof  INPUT5_General.rs  INPUT5_General.sof  INPUT6_Big.rs  INPUT6_Big.sof  INPUT7_Error.rs  INPUT_Linear.rs  INPUT_Pytha.rs  INPUT_Quad.rs  README.txt  test.rs
